--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -9,7 +9,7 @@
           <%= image_tag image , class: "store-image" %>
         <% end %>
       <% else %>
-        <%= image_tag '/images/no_image.png', class: "store-image" %>
+        <%= image_tag 'no_image.png', class: "store-image" %>
       <% end %>
       </div>
       <div class="store-categories">
