コメント削除とスパム報告の条件分け実装

--- a/app/assets/stylesheets/stores/show.css
+++ b/app/assets/stylesheets/stores/show.css
@@ -173,6 +173,15 @@
   width: 200px;
 }
 
+.spam {
+  margin-left: 20px;
+}
+
+.fa-trash-alt {
+  margin-left: 20px;
+  color: black;
+}
+
 .comment-form-wrapper {
   margin-top: 30px;
   padding: 20px;
