--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,30 +1,32 @@
 <%# stores/show, commnets/create.js.erbで適用 %>
-<div class="comment-upper">
-  <% if comment.user.profile.profile_image.attached? %>
-  <%= image_tag comment.user.profile.profile_image, class: "profile-image" %>
-  <% else %>
-  <%= image_tag 'profile_icon.png', class: "profile-image" %>
-  <% end %>
-  <div class="comment-user"><%= "#{comment.user.nickname}さん" %></div>
-  <div class="comment-user"><%= "#{comment.user.profile.age}歳" if comment.user.profile.age %></div>
-  <div class="comment-user"><%= comment.user.profile.sex.name if comment.user.profile.sex %></div>            
-  <div class="comment-date"><%= l comment.created_at %></div>
-  <% if user_signed_in? %>
-  <%# 投稿者本人の場合スパム報告は表示しない %>
-  <%= link_to '不適切なコメントを報告する', '#',  class: "spam" if comment.user_id != current_user.id %>
-  <%# 投稿者本人と店舗作成者のみがコメント削除ができる %>
-    <% if comment.user_id == current_user.id || comment.store.user_id == current_user.id %>
-      <%= link_to store_comment_path(comment.store, comment), method: :delete, remote: true, class: "comment-destory" do %>
-        <i class="fas fa-trash-alt"></i>
+<div id=<%= comment.id %>>
+  <div class="comment-upper">
+    <% if comment.user.profile.profile_image.attached? %>
+    <%= image_tag comment.user.profile.profile_image, class: "profile-image" %>
+    <% else %>
+    <%= image_tag 'profile_icon.png', class: "profile-image" %>
+    <% end %>
+    <div class="comment-user"><%= "#{comment.user.nickname}さん" %></div>
+    <div class="comment-user"><%= "#{comment.user.profile.age}歳" if comment.user.profile.age %></div>
+    <div class="comment-user"><%= comment.user.profile.sex.name if comment.user.profile.sex %></div>            
+    <div class="comment-date"><%= l comment.created_at %></div>
+    <% if user_signed_in? %>
+    <%# 投稿者本人の場合スパム報告は表示しない %>
+    <%= link_to '不適切なコメントを報告する', '#',  class: "spam" if comment.user_id != current_user.id %>
+    <%# 投稿者本人と店舗作成者のみがコメント削除ができる %>
+      <% if comment.user_id == current_user.id || comment.store.user_id == current_user.id %>
+        <%= link_to store_comment_path(comment.store, comment), method: :delete, remote: true, class: "comment-destory" do %>
+          <i class="fas fa-trash-alt"></i>
+        <% end %>
       <% end %>
     <% end %>
-  <% end %>
-</div>
-<div class="comment-lower">
-  <div class="comment-text"><%= comment.comment %></div>
-  <div class="comment-images">
-  <% comment.comment_images.each do |comment_image| %>
-    <div class="comment-image-box"><%= image_tag comment_image, class: "comment-image" %></div>
-  <% end %>
-  </div>  
+  </div>
+  <div class="comment-lower">
+    <div class="comment-text"><%= comment.comment %></div>
+    <div class="comment-images">
+    <% comment.comment_images.each do |comment_image| %>
+      <div class="comment-image-box"><%= image_tag comment_image, class: "comment-image" %></div>
+    <% end %>
+    </div>  
+  </div>
 </div>
