message　結合テスト追加

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -15,7 +15,7 @@
     <%# <%= link_to '不適切なコメントを報告する', '#',  class: "spam" if comment.user_id != current_user.id %>
     <%# 投稿者本人と店舗作成者のみがコメント削除ができる %>
       <% if comment.user_id == current_user.id || comment.store.user_id == current_user.id %>
-        <%= link_to store_comment_path(comment.store.id, comment), method: :delete, remote: true, class: "comment-destory" do %>
+        <%= link_to store_comment_path(comment.store, comment), method: :delete, remote: true, class: "comment-destory" do %>
           <i class="fas fa-trash-alt"></i>
         <% end %>
       <% end %>
